# polymesh_api_example_gui

./: Cargo.toml  README.md  build_web.sh  index.html  manifest.json  polymesh_api_example_gui-7a871d8d3ced3843.js  polymesh_api_example_gui-7a871d8d3ced3843_bg.wasm  rust-toolchain.toml
assets/: sw.js
docs/: README.md  index.html  manifest.json  polymesh_api_example_gui.js  polymesh_api_example_gui_bg.wasm  sw.js
src/: app.rs  lib.rs  main.rs
src/app/: mod.rs
src/backend/: mod.rs
