[package]
name = "polymesh_api_example_gui"
default-run = "polymesh_api_example_gui_bin"
version = "0.1.0"
authors = ["Polymesh Association"]
edition = "2021"
rust-version = "1.71"

[[bin]]
name = "polymesh_api_example_gui_bin"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
egui = "0.22.0"
eframe = { version = "0.22.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
egui_extras = { version = "0.22.0" }

serde = { version = "1", features = ["derive"] } # You only need this if you want app persistence
serde_json = { version = "1.0", features = ["preserve_order"] }

log = "0.4.17"
hex = "0.4.3"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"
tracing-subscriber = "0.3"
tokio = { version = "1.19", features = ["full"] }
#polymesh-api = { version = "2.0", features = ["download_metadata"] }
polymesh-api = { version = "2.0", features = [] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = { version = "0.2", features = ["color"] }
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
tokio = { version = "1.19", features = ["rt", "sync"] }
polymesh-api = { version = "2.0", default-features = false, features = ["wasm", "serde"] }
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/egui" }
# eframe = { path = "../egui/eframe" }

#polymesh-api = { path = "../polymesh-api/" }
#subxt-signer = { path = "../subxt/signer/" }
polymesh-api = { git = "https://github.com/PolymeshAssociation/polymesh-api" }
subxt-signer = { git = "https://github.com/Neopallium/subxt" }
